在庫登録の修正

--- a/index.html
+++ b/index.html
@@ -2,195 +2,274 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>使用済み在庫一覧</title>
+  <title>在庫一覧</title>
   <style>
-    body { font-family: sans-serif; background: #f4f4f4; padding: 20px; color: #2c3e50; margin-top: 60px; }
+    body { font-family: sans-serif; background: #f9f9f9; padding: 20px; color: #2c3e50; margin-top: 60px; }
     h1, h2 { text-align: center; }
-    table { width: 100%; border-collapse: collapse; margin-bottom: 10px; }
-    th, td { padding: 10px; border: 1px solid #ccc; text-align: center; }
-    th { background-color: #7f8c8d; color: white; }
+    table { width: 100%; border-collapse: collapse; margin-bottom: 30px; table-layout: fixed; }
+    th, td { padding: 12px; border: 1px solid #ccc; text-align: center; vertical-align: middle; font-size: 16px; word-wrap: break-word; }
+    th { background-color: #3498db; color: white; }
+    button { padding: 10px 14px; border: none; border-radius: 6px; cursor: pointer; font-size: 14px; }
+    .unused { background-color: #e67e22; color: white; }
+    .delete { background-color: #c0392b; color: white; }
+    .select-group { display: flex; gap: 6px; justify-content: center; align-items: center; flex-wrap: wrap; }
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      gap: 6px;
+      width: 100%;
+    }
+    .input-group select,
+    .input-group input {
+      width: 100%;
+      box-sizing: border-box;
+    }
     .nav {
       position: fixed; top: 0; left: 0; right: 0; background: #34495e; padding: 10px; text-align: center;
     }
     .nav a {
       margin: 0 10px; color: white; text-decoration: none; font-weight: bold;
     }
-    input.price-input {
-      width: 100px;
-      text-align: right;
-    }
-    .more-button {
-      display: block;
-      margin: 5px auto 25px;
-      padding: 5px 15px;
-      background: #2980b9;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .more-button:hover {
-      background: #3498db;
-    }
-    .edit-controls {
-      position: absolute;
+    #editModeButton {
+      position: fixed;
       top: 10px;
       right: 10px;
+      background: #2c3e50;
+      color: white;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+    #deleteSelectedBtn {
+      display: none;
+      position: fixed;
+      top: 60px;
+      right: 10px;
+      background: #c0392b;
+      color: white;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+    input::placeholder { color: #aaa; font-style: italic; }
+    select, input[type="text"] {
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-sizing: border-box;
+    }
+    .manage-label {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+    .manage-label span {
+      font-weight: bold;
+    }
+    .manage-label input {
+      width: 60px;
+      text-align: center;
+    }
+    @media (max-width: 600px) {
+      th, td { font-size: 14px; padding: 8px; }
+      button { font-size: 13px; padding: 8px 12px; }
     }
   </style>
 </head>
 <body>
   <div class="nav">
-    <a href="zaiko-toroku.html">📅 在庫登録</a>
+    <a href="zaiko-toroku.html">📥 在庫登録</a>
     <a href="inventory-list.html">📋 未使用一覧</a>
     <a href="inventory-used.html">✔ 使用済み一覧</a>
-    <a href="report.html">🖘 使用履歴</a>
-    <div class="edit-controls">
-      <button id="editToggle">✏ 編集</button>
-    </div>
+    <a href="report.html">📜 使用履歴</a>
   </div>
 
-  <h1>✔ 使用済み 在庫一覧</h1>
-  <div id="usedContainer"></div>
-  <div style="text-align:center; margin-top: 20px;">
-    <button onclick="savePrices()">📌 納入価格を保存</button>
-    <button id="deleteButton" style="display:none; margin-left: 10px;" onclick="deleteSelected()">❌ 選択した項目を削除</button>
-  </div>
+  <button id="editModeButton" onclick="toggleEditMode()">🛠 編集モード</button>
+  <button id="deleteSelectedBtn" onclick="deleteSelectedItems()">🗑 選択削除</button>
+
+  <h1>📦 未使用 在庫一覧</h1>
+  <div id="inventoryContainer"></div>
 
   <script>
-    const inventory = JSON.parse(localStorage.getItem('inventoryData') || '[]');
-    let usedReports = JSON.parse(localStorage.getItem('usedReports') || '[]');
+    const container = document.getElementById('inventoryContainer');
+    let inventory = JSON.parse(localStorage.getItem('inventoryData') || '[]');
+    const usedReports = JSON.parse(localStorage.getItem('usedReports') || '[]');
 
-    const grouped = {};
-    usedReports.forEach((report, index) => {
-      const item = inventory.find(i => i.id === report.itemId);
-      if (!item) return;
-      const category = item.category || "未分類";
-      if (!grouped[category]) grouped[category] = [];
+    let editMode = false;
+    function toggleEditMode() {
+      editMode = !editMode;
+      document.querySelectorAll('.delete-checkbox').forEach(cb => cb.style.display = editMode ? 'inline-block' : 'none');
+      document.getElementById('deleteSelectedBtn').style.display = editMode ? 'inline-block' : 'none';
+      document.getElementById('editModeButton').textContent = editMode ? '✅ 編集終了' : '🛠 編集モード';
+    }
 
-      const usedDateFormatted = report.date ? new Date(report.date).toLocaleDateString('ja-JP', { year: 'numeric', month: 'numeric', day: 'numeric' }) : '';
+    function deleteSelectedItems() {
+      const checkedBoxes = document.querySelectorAll('.delete-checkbox input:checked');
+      if (checkedBoxes.length === 0) {
+        alert("削除する在庫を選んでください。");
+        return;
+      }
+      if (!confirm("選択された在庫を削除しますか？")) return;
 
-      grouped[category].push({
-        user: item.user,
-        site: item.site || "",
-        name: item.name,
-        model: item.model,
-        date: item.date,
-        usedBy: report.user || '',
-        quantity: report.quantity || '',
-        usedDate: usedDateFormatted,
-        manageCode: report.manageCode || '',
-        price: report.price || "",
-        index
-      });
+      const idsToDelete = Array.from(checkedBoxes).map(cb => parseInt(cb.value));
+      inventory = inventory.filter(i => !idsToDelete.includes(i.id));
+      localStorage.setItem('inventoryData', JSON.stringify(inventory));
+      location.reload();
+    }
+
+    const usedMap = {};
+    usedReports.forEach(r => {
+      if (!usedMap[r.itemId]) usedMap[r.itemId] = 0;
+      usedMap[r.itemId] += parseInt(r.quantity);
     });
 
-    const container = document.getElementById('usedContainer');
-    let editMode = false;
+    const remainingItems = inventory.map(item => {
+      const used = usedMap[item.id] || 0;
+      const remaining = item.quantity - used;
+      return { ...item, remaining };
+    }).filter(item => item.remaining > 0);
+
+    const categoryOptions = ["", "ガス給湯器", "ガス瞬間湯沸器", "リモコン", "配管カバー"];
+
+    const grouped = {};
+    remainingItems.forEach(item => {
+      const cat = item.category || "未分類";
+      if (!grouped[cat]) grouped[cat] = [];
+      grouped[cat].push(item);
+    });
+
+    function getPrefix(category) {
+      if (category.includes("給湯")) return "キ-";
+      if (category.includes("湯沸")) return "ユ-";
+      if (category.includes("リモコン")) return "リ-";
+      return "-";
+    }
 
     Object.keys(grouped).forEach(category => {
-      const heading = document.createElement('h2');
-      heading.textContent = `📁 ${category}`;
-      container.appendChild(heading);
+      const h2 = document.createElement('h2');
+      h2.textContent = `📁 ${category}`;
+      container.appendChild(h2);
 
       const table = document.createElement('table');
-      const tbody = document.createElement('tbody');
-      const maxVisible = 10;
-
-      grouped[category].forEach((item, i) => {
-        const row = document.createElement('tr');
-        if (i >= maxVisible) row.style.display = 'none';
-        row.innerHTML = `
-          <td>${item.user}</td>
-          <td>${item.site}</td>
-          <td>${item.name}</td>
-          <td>${item.model}</td>
-          <td>${item.date}</td>
-          <td>${item.usedBy}</td>
-          <td>${item.quantity}</td>
-          <td>${item.manageCode}</td>
-          <td>${item.usedDate}</td>
-          <td><input type="text" class="price-input" data-index="${item.index}" value="${item.price}" placeholder="0円"></td>
-          <td class="checkbox-cell" style="display:none;"><input type="checkbox" class="delete-check" data-index="${item.index}"></td>
-        `;
-        tbody.appendChild(row);
-      });
-
       table.innerHTML = `
+        <colgroup>
+          <col style="width: 10%">
+          <col style="width: 20%">
+          <col style="width: 15%">
+          <col style="width: 15%">
+          <col style="width: 10%">
+          <col style="width: 15%">
+          <col style="width: 15%">
+        </colgroup>
         <thead>
           <tr>
             <th>登録者</th>
-            <th>現場名</th>
+            <th>カテゴリ＆現場名</th>
             <th>商品名</th>
             <th>型式</th>
+            <th>残数</th>
             <th>仕入れ日</th>
-            <th>使用者</th>
-            <th>使用数</th>
-            <th>管理番号</th>
-            <th>使用日</th>
-            <th>納入価格</th>
-            <th class="checkbox-cell" style="display:none;">選択</th>
+            <th>操作</th>
           </tr>
         </thead>
+        <tbody>
+          ${grouped[category].map(item => {
+            const selectorId = `userSelect-${item.id}`;
+            const qtyId = `qtySelect-${item.id}`;
+            const manageId = `manageId-${item.id}`;
+            const catId = `category-${item.id}`;
+            const siteId = `siteInput-${item.id}`;
+            const prefix = getPrefix(item.category || "");
+            const optionsHtml = categoryOptions.map(opt => `<option value="${opt}" ${item.category === opt ? 'selected' : ''}>${opt}</option>`).join('');
+
+            return `
+              <tr>
+                <td>${item.user}</td>
+                <td>
+                  <div class="input-group">
+                    <select id="${catId}" onchange="updateCategory(${item.id}, this.value)">${optionsHtml}</select>
+                    <input type="text" id="${siteId}" placeholder="(現場名)" value="${item.site || ''}" onchange="updateSite(${item.id}, this.value)" />
+                  </div>
+                </td>
+                <td>${item.name}</td>
+                <td>${item.model}</td>
+                <td>${item.remaining}</td>
+                <td>${item.date}</td>
+                <td>
+                  <div class="select-group">
+                    <select id="${selectorId}">
+                      <option value="">使用者選択</option>
+                      <option value="阿部">阿部</option>
+                      <option value="鈴木">鈴木</option>
+                      <option value="紺野">紺野</option>
+                      <option value="亀岡">亀岡</option>
+                      <option value="大槻">大槻</option>
+                      <option value="青田">青田</option>
+                      <option value="菊田">菊田</option>
+                      <option value="高橋">高橋</option>
+                      <option value="佐藤">佐藤</option>
+                      <option value="今泉">今泉</option>
+                    </select>
+                    <select id="${qtyId}">
+                      ${[...Array(item.remaining).keys()].map(i => `<option value="${i + 1}">${i + 1}</option>`).join('')}
+                    </select>
+                    <label class="manage-label">
+                      <span>${prefix}</span><input type="text" id="${manageId}" placeholder="番号" />
+                    </label>
+                    <button class="unused" onclick="reportUsed(${item.id}, '${selectorId}', '${qtyId}', '${manageId}', '${prefix}')">使用する</button>
+                    <span class="delete-checkbox" style="display:none"><input type="checkbox" value="${item.id}"></span>
+                  </div>
+                </td>
+              </tr>
+            `;
+          }).join('')}
+        </tbody>
       `;
-      table.appendChild(tbody);
       container.appendChild(table);
-
-      if (grouped[category].length > maxVisible) {
-        const button = document.createElement('button');
-        button.textContent = 'もっと見る';
-        button.className = 'more-button';
-        let expanded = false;
-
-        button.addEventListener('click', () => {
-          const rows = tbody.querySelectorAll('tr');
-          rows.forEach((row, i) => {
-            if (i >= maxVisible) row.style.display = expanded ? 'none' : '';
-          });
-          expanded = !expanded;
-          button.textContent = expanded ? '閉じる' : 'もっと見る';
-        });
-
-        container.appendChild(button);
-      }
     });
 
-    document.addEventListener('blur', function (e) {
-      if (e.target.classList.contains('price-input')) {
-        let value = e.target.value.replace(/[^\d]/g, '');
-        e.target.value = value ? parseInt(value, 10).toLocaleString() + '円' : '';
-      }
-    }, true);
+    function reportUsed(id, selectorId, qtyId, manageId, prefix) {
+      const selectedUser = document.getElementById(selectorId).value;
+      const selectedQty = parseInt(document.getElementById(qtyId).value);
+      const manageCode = document.getElementById(manageId).value.trim();
 
-    function savePrices() {
-      const inputs = document.querySelectorAll('.price-input');
-      inputs.forEach(input => {
-        const index = input.getAttribute('data-index');
-        let value = input.value.replace(/[^\d]/g, '');
-        usedReports[index].price = value ? parseInt(value, 10).toLocaleString() + '円' : '';
+      if (!selectedUser || !selectedQty) {
+        alert("使用者と個数を選択してください。");
+        return;
+      }
+
+      const fullManageCode = prefix + manageCode;
+      const item = inventory.find(i => i.id === id);
+      const usedLogs = JSON.parse(localStorage.getItem('usedReports') || '[]');
+      usedLogs.push({
+        itemId: id,
+        itemName: item.name,
+        model: item.model,
+        user: selectedUser,
+        quantity: selectedQty,
+        manageCode: fullManageCode,
+        date: new Date().toLocaleString()
       });
-      localStorage.setItem('usedReports', JSON.stringify(usedReports));
-      alert("納入価格を保存しました！");
+      localStorage.setItem('usedReports', JSON.stringify(usedLogs));
+      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました！`);
+      location.reload();
     }
 
-    document.getElementById('editToggle').addEventListener('click', () => {
-      editMode = !editMode;
-      document.querySelectorAll('.checkbox-cell').forEach(cell => {
-        cell.style.display = editMode ? '' : 'none';
-      });
-      document.getElementById('deleteButton').style.display = editMode ? 'inline-block' : 'none';
-      document.getElementById('editToggle').textContent = editMode ? '✅ 完了' : '✏ 編集';
-    });
-
-    function deleteSelected() {
-      const checked = document.querySelectorAll('.delete-check:checked');
-      if (!checked.length) return alert("削除する項目が選択されていません！");
-      if (!confirm("選択した項目を削除します。よろしいですか？")) return;
-      const indexes = Array.from(checked).map(cb => parseInt(cb.dataset.index));
-      usedReports = usedReports.filter((_, i) => !indexes.includes(i));
-      localStorage.setItem('usedReports', JSON.stringify(usedReports));
-      alert("削除しました！");
+    function updateCategory(id, newCategory) {
+      inventory = inventory.map(i => i.id === id ? { ...i, category: newCategory } : i);
+      localStorage.setItem('inventoryData', JSON.stringify(inventory));
       location.reload();
+    }
+
+    function updateSite(id, newSite) {
+      inventory = inventory.map(i => i.id === id ? { ...i, site: newSite } : i);
+      localStorage.setItem('inventoryData', JSON.stringify(inventory));
     }
   </script>
 </body>
