--- a/zaiko-toroku.html
+++ b/zaiko-toroku.html
@@ -204,93 +204,113 @@
     document.getElementById('modelFields').appendChild(div);
   }
 
-    function loadOrdered() {
-      fetch(GET_URL)
-        .then(res => res.json())
-        .then(data => {
-          const grouped = {};
-          data.forEach(item => {
-            const key = `${item.category}-${item.user}-${item.site}-${item.maker}-${item.date}`;
-            if (!grouped[key]) grouped[key] = { ...item, items: [] };
-            grouped[key].items.push({ model: item.model, qty: item.qty });
+  function loadOrdered() {
+    fetch(GET_URL)
+      .then(res => res.json())
+      .then(data => {
+        const grouped = {};
+        data.forEach(item => {
+          const key = `${item.category}-${item.user}-${item.site}-${item.maker}-${item.date}`;
+          if (!grouped[key]) grouped[key] = { ...item, items: [] };
+          grouped[key].items.push({ model: item.model, qty: item.qty });
+        });
+
+        orderedList.innerHTML = '<h2 style="text-align:center; margin-top:40px;">📋 注文済みの商品</h2>';
+        Object.values(grouped).forEach(group => {
+          const title = document.createElement('div');
+          title.className = 'category';
+          title.textContent = group.category;
+          orderedList.appendChild(title);
+
+          const div = document.createElement('div');
+          div.className = 'ordered-item';
+
+          const makerInfo = document.createElement('div');
+          makerInfo.className = 'maker-label';
+          makerInfo.textContent = `メーカー: ${group.maker}`;
+
+          const info = document.createElement('div');
+          info.className = 'ordered-info';
+          group.items.forEach(i => {
+            const itemDiv = document.createElement('div');
+            itemDiv.style.marginBottom = '5px';
+            itemDiv.innerHTML = `${i.model}（${i.qty}台）`;
+            info.appendChild(itemDiv);
           });
 
-          orderedList.innerHTML = '<h2 style="text-align:center; margin-top:40px;">📋 注文済みの商品</h2>';
-          Object.values(grouped).forEach(group => {
-            const title = document.createElement('div');
-            title.className = 'category';
-            title.textContent = group.category;
-            orderedList.appendChild(title);
+          const meta = document.createElement('div');
+          meta.className = 'order-meta';
+          meta.innerHTML = `登録者: ${group.user} ／ 現場名: ${group.site} ／ 日付: ${group.date}`;
 
-            const div = document.createElement('div');
-            div.className = 'ordered-item';
+          const actions = document.createElement('div');
+          actions.className = 'order-actions';
+          actions.innerHTML = `
+            <div class="left-buttons">
+              <button onclick="registerToLocal('${group.maker}', '${group.category}', '${group.site}', '${group.date}', '${group.user}')">✅ 登録</button>
+              <button onclick="alert('※削除は後で実装予定です')">🗑 削除</button>
+            </div>
+            <div class="right-button">
+              <button onclick="location.href='order-sheet.html?maker=${group.maker}'">📄 注文書作成</button>
+            </div>
+          `;
 
-            const makerInfo = document.createElement('div');
-            makerInfo.className = 'maker-label';
-            makerInfo.textContent = `メーカー: ${group.maker}`;
+          div.appendChild(makerInfo);
+          div.appendChild(info);
+          div.appendChild(meta);
+          div.appendChild(actions);
+          orderedList.appendChild(div);
+        });
+      })
+      .catch(err => console.error("読み込みエラー:", err));
+  }
 
-            const info = document.createElement('div');
-            info.className = 'ordered-info';
-            group.items.forEach(i => {
-              const itemDiv = document.createElement('div');
-              itemDiv.style.marginBottom = '5px';
-              itemDiv.innerHTML = `${i.model}（${i.qty}台）`;
-              info.appendChild(itemDiv);
-            });
+  function registerToLocal(maker, category, site, date, user) {
+    const existing = JSON.parse(localStorage.getItem('zaiko') || '[]');
+    existing.push({ maker, category, site, date, user });
+    localStorage.setItem('zaiko', JSON.stringify(existing));
+    alert("未使用一覧に登録しました！");
+  }
 
-            const meta = document.createElement('div');
-            meta.className = 'order-meta';
-            meta.innerHTML = `登録者: ${group.user} ／ 現場名: ${group.site} ／ 日付: ${group.date}`;
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
 
-            div.appendChild(makerInfo);
-            div.appendChild(info);
-            div.appendChild(meta);
-            orderedList.appendChild(div);
-          });
-        })
-        .catch(err => console.error("読み込みエラー:", err));
+    const formData = new FormData(form);
+    const user = formData.get("user");
+    const maker = formData.get("maker");
+    const category = formData.get("category");
+    const site = formData.get("site");
+    const date = formData.get("date");
+    const models = formData.getAll("model[]");
+    const qtys = formData.getAll("qty[]");
+
+    for (let i = 0; i < models.length; i++) {
+      const params = new URLSearchParams();
+      params.append("user", user);
+      params.append("maker", maker);
+      params.append("category", category);
+      params.append("model", models[i]);
+      params.append("qty", qtys[i]);
+      params.append("site", site);
+      params.append("date", date);
+
+      fetch(POST_URL, {
+        method: "POST",
+        body: params
+      })
+      .then(res => res.text())
+      .then(res => {
+        console.log("登録完了:", res);
+        loadOrdered();
+      })
+      .catch(err => console.error("送信失敗:", err));
     }
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
+    alert("登録を受け付けました！");
+    form.reset();
+    document.getElementById('modelFields').innerHTML = '<div class="model-group"><label>型式<input type="text" name="model[]"></label><label>個数<input type="number" name="qty[]" min="1" value="1"></label></div>';
+  });
 
-      const formData = new FormData(form);
-      const user = formData.get("user");
-      const maker = formData.get("maker");
-      const category = formData.get("category");
-      const site = formData.get("site");
-      const date = formData.get("date");
-      const models = formData.getAll("model[]");
-      const qtys = formData.getAll("qty[]");
-
-      for (let i = 0; i < models.length; i++) {
-        const params = new URLSearchParams();
-        params.append("user", user);
-        params.append("maker", maker);
-        params.append("category", category);
-        params.append("model", models[i]);
-        params.append("qty", qtys[i]);
-        params.append("site", site);
-        params.append("date", date);
-
-        fetch(POST_URL, {
-          method: "POST",
-          body: params
-        })
-        .then(res => res.text())
-        .then(res => {
-          console.log("登録完了:", res);
-          loadOrdered();
-        })
-        .catch(err => console.error("送信失敗:", err));
-      }
-
-      alert("登録を受け付けました！");
-      form.reset();
-      document.getElementById('modelFields').innerHTML = '<div class="model-group"><label>型式<input type="text" name="model[]"></label><label>個数<input type="number" name="qty[]" min="1" value="1"></label></div>';
-    });
-
-    window.addEventListener("DOMContentLoaded", loadOrdered);
+  window.addEventListener("DOMContentLoaded", loadOrdered);
   </script>
 </body>
 </html>
